syntax = "proto3";
package shiva.core.communication_objects;

import "shiva/core/protobuf_definitions/protos/agent_action.proto";

message AgentStateProto {
    repeated float next_observations = 1;
    repeated float rewards = 2;
    repeated float dones = 3;
}

message EnvironmentSummaryProto {
    float steps_per_episode = 1;
    float step_count = 2;
    float temp_done_counter = 3;
    float done_count = 4;
    float reward_per_step = 5;
    float reward_per_episode = 6;
    float reward_total = 7;
}

message EnvironmentStateProto {
    map<int32, AgentStateProto> agent_states = 1;
    EnvironmentSummaryProto env_data = 2;
}

service EnvironmentServer {
    rpc Step (AgentActionProto) returns (EnvironmentStateProto) {}
}